--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,10 +14,20 @@ html {
  * Global layout stuff
  */
 
+
+
 body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+main {
+  width: 450px;
+  background-color: white;
+  padding-top: 140px;
+  margin: auto;
 }
 
 /*
