--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -49,6 +49,11 @@ article header h2 {
   padding-left: 10%;
 }
 
+article header p3 {
+  float: right;
+  font-style: italic
+}
+
 article:hover {
   color: black;
   opacity: 1;
