--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@
   top: 0;
   padding-left: 2em;
   padding-right: 2em;
+  z-index: 2;
 }
 
 #nav-bar .logo {
@@ -20,4 +21,36 @@
   margin: 10px;
   line-height: 2.5em;
   font-size: 2em;
+}
+
+#nav-bar .compose {
+  float: right;
+  padding: 10px;
+  margin: 10px;
+  margin-top: 25px;
+  border-radius: 7px 7px 7px 7px;
+  background-color: whitesmoke;
+  font-style: italic;
+  padding-left: 36px;
+  margin-right: 15px;
+}
+
+#nav-bar #compose:hover {
+  background-color: white;
+  box-shadow: 0px 0px 14px 0px grey;
+
+}
+
+i {
+  color: #00a087;
+}
+
+
+button {
+  float: right;
+  border-radius: 7px 7px 7px 7px;
+  background-color: whitesmoke;
+  height: 39px;
+  margin: 10px;
+  margin-top: 30px;
 }
