--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -4,13 +4,13 @@
   border: 1px solid #D0D0D0;
   border-radius: 5px;
   padding: 10px;
+  box-shadow: 0px 0px 2px 0px whitesmoke;
 } 
 
 .new-tweet textarea {
   color: black;
   width: 100%;
-  padding: 10px;
-  
+  padding: 10px;  
 }
 
 span.counter {
@@ -37,4 +37,14 @@ selection.new-tweet input {
   color: red;
 }
 
+.new-tweet div {
+  color: red
+}
+
+.new-tweet p2 {
+  padding-left: 10px;
+  padding-top: 5px;
+  color: red;
+  opacity: .8px;
+}
 
