--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -4,6 +4,7 @@ article  {
   border-radius: 8px;
   margin-top: 2em;
   opacity: .8;
+  box-shadow: 0px 0px 2px 0px whitesmoke;
 }
 
 article header {
@@ -37,11 +38,22 @@ article p {
   padding: 20px;
 }
 
+article p1 {
+  font-size: 12px
+}
+
 article header img {
   float: left;
   height: 30px;
   width: 25px;
   border: 1px solid grey;
+}
+
+article textarea {
+  color: black;
+  width: 100%;
+  padding: 10px;
+  
 }
 
 article header h2 {
@@ -51,7 +63,8 @@ article header h2 {
 
 article header p3 {
   float: right;
-  font-style: italic
+  font-style: italic;
+  font-size: 13px;
 }
 
 article:hover {
